--- a/package.json
+++ b/package.json
@@ -1,4 +1,22 @@
 {
+  "name": "pakornds.github.io",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "dev": "npx tailwindcss -i ./public/css/style.css -o ./public/css/tailwind.css --watch"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pakornds/pakornds.github.io.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/pakornds/pakornds.github.io/issues"
+  },
+  "homepage": "https://github.com/pakornds/pakornds.github.io#readme",
   "devDependencies": {
     "tailwindcss": "^3.1.8"
   }
